# commitconf2024

./: README.md  button.py  commit_conf.py  pyproject.toml  requirements.txt
data/: df_combinado_latlon.csv  df_distritos.csv  emt-data-clean.csv  emt-data.csv  emt-linea-data-clean.csv  emt-linea-data.csv  emt_info.json  longitude_latitude.csv  net_busstop.csv  net_cp.csv  net_distrito.csv  stops_toA.csv  stops_toB.csv
notebooks/: Retrieve_API_info.ipynb  clean-data.ipynb  network-analysis.ipynb  network_tools.py
pages/: bia.py  collapse.py  eda.py  konigsberg.py  net_analysis.py  networks.py  properties.py  tools.py  wantmore.py
toolbox/: context.txt  genai.py  net_utils.py  utils.py
